fix button text overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -159,7 +159,7 @@ button {
     height: 5vh;
     border-radius: 10px;
     color: white;
-    font-size: 2vh;
+    font-size: 1.5vh;
     max-width: 200px;
     max-height: 50px;
 }
